# uv2nix-env

./: README.md  flake.nix
example/: pyproject.toml
example/src/example/: __init__.py
lib/: apply-concerns.nix  base-overlay.nix  builders.nix  extra-inputs.nix  mk-concern.nix  mk-py-env.nix  mk-workspace.nix  overrides.nix  patch.nix  wrap-cuda.nix
overlays/: cuda.nix  jax.nix  pyg.nix  rapids.nix  torch.nix  wheels.nix
templates/default/: flake.nix  pyproject.toml
templates/jax/: flake.nix  pyproject.toml
templates/rapids/: flake.nix  pyproject.toml
templates/rapids/src/example/: __init__.py
templates/torch/: flake.nix  pyproject.toml
