[project]
name = "example"
version = "0.1.0"
description = "Self-check workspace for bioinformatics-py-overrides (light binary wheel)"
requires-python = ">=3.11"
# numpy is a prebuilt binary wheel -> exercises the autoPatchelf override path
# (overrides.nix), while staying CPU-only and fast.
dependencies = ["numpy>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example"]
