[project]
name = "example"
version = "0.1.0"
description = "Self-check workspace for uv2nix-env (light binary wheel)"
requires-python = ">=3.11"
# numpy is a prebuilt binary wheel -> exercises the autoPatchelf override path
# (overrides.nix), while staying CPU-only and fast.
dependencies = ["numpy>=2"]

# uv_build handles editable installs natively (hatchling would also need the
# `editables` build dep); matches uv2nix's own templates.
[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
